src/tests/fixtures/enums/ExplicitlyNumericEnum.ts.expected
-----------------
INPUT
----------------- 
/** @GQLEnum */
enum Enum {
  VALID = 1,
  INVALID = 2,
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/enums/ExplicitlyNumericEnum.ts:3:3 - error: Expected `@GQLEnum` enum members to have string literal initializers. For example: `FOO = 'foo'`.

If you think <library name> should be able to infer this type, please report an issue at <issue URL>.

3   VALID = 1,
    ~~~~~~~~~
src/tests/fixtures/enums/ExplicitlyNumericEnum.ts:4:3 - error TS349389149282: Expected `@GQLEnum` enum members to have string literal initializers. For example: `FOO = 'foo'`.

If you think <library name> should be able to infer this type, please report an issue at <issue URL>.

4   INVALID = 2,
    ~~~~~~~~~~~
